# InfiniTrain

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  InfiniTrain报告.md  README.md  TEST_REPORT.md  algo.tex  benchmark.py  compare_loss.out  env_info.txt  flash_atten.md  flash_attention_report.md  gpt2-flash-result.txt  gpt2-flash.sh  gpt2-non-flash-result.txt  gpt2-non-flash.sh  llama3-flash.sh  llama3-non-flash-result.txt  llama3-non-flash.sh  perf_table.md  performance_report.md  plot_metrics.py  report.md  run_help.md  run_hetero_gpt2.sh  test_flash_layout.cc
.claude/rules/: operator-dev.md
.github/workflows/: format-check.yaml
audit/: problems.log.md  tasking-plan-iteration-2.md  tasking-plan-storys.md
cmake/: test_macros.cmake
cuda-report/: cuda-report_20260315_simon_chou.md  performance_go_no-go_v0.5.0.md
cuda-report/cuda-report-img/: judge_20260316_014445_summary.txt  judge_last_eval_ts.txt
cuda-report/cuda-report-judge/: judge-result.md
docs/: 2026春季人工智能大赛-Generator抽象选题.md  device_guard_design.md  dtype_registry_design.md  flash_attention_design.md  hook_mechanism.md  lora_usage.md  lora_usage_guide.md  precision_budget.md  precision_checker_guide.md  test_infrastructure_design.md  test_usage_guide.md
docs/flash_sdpa/: README.md  report_20260314_180307.md  report_20260314_180845.md  report_20260315_103418.md  summary_20260314_180307.csv  summary_20260314_180845.csv  summary_20260315_103418.csv
docs/flash_sdpa/env/: env_20260314_180307.txt  (+2 more)
example/common/: checkpoint_loader.cc  checkpoint_loader.h  tiny_shakespeare_dataset.cc  tiny_shakespeare_dataset.h  tokenizer.cc  tokenizer.h  utils.cc  utils.h
example/gpt2/: checkpoint_loader.cc  checkpoint_loader.h  config.h  dataset.cc  dataset.h  main.cc  net.cc  net.h
example/gpt2_tp/: main.cc  net.cc
example/llama3/: Dockerfile.llama3  checkpoint_loader.cc  checkpoint_loader.h  config.h  main.cc  net.cc  net.h  probe_env.py  run_llama3_7b.sh
example/llama3_tp/: main.cc  net.cc  net.h
example/mnist/: dataset.cc  dataset.h  main.cc  net.cc  net.h
example/qwen3/: checkpoint_loader.cc  checkpoint_loader.h  config.h  main.cc
example/tiny_mixtral/: checkpoint_loader.cc  checkpoint_loader.h  config.h  main.cc
infini_train/include/: autocast.h  checkpoint.h  dataloader.h  datatype.h  device.h  dispatcher.h  dtype_dispatch.h  generator.h  infiniccl.h  lr_scheduler.h  optimizer.h  profiler.h  scalar.h  tensor.h  tensor_fill_impl.h
infini_train/src/: checkpoint.cc  dataloader.cc  datatype.cc  device.cc  infiniccl.cc  lr_scheduler.cc  ops.cc  optimizer.cc  profiler.cc  tensor.cc
my-flash-attention/: attention_v6.cu  attention_v6_bp.cu  check_cuda_bp.py  check_e2e.py  common.h  flash_attention_interface.h
scripts/: compare_loss.py  compare_tps.py  compare_utils.py  convert_hf_qwen3_to_llmc.py  convert_input_to_bin.py  extract_training_stats.py  flash_large_seq_test_config.json  flash_sdpa_benchmark.bash  flash_sdpa_parse.py  flash_test_config.json  format.py  generate_charts.py  plot_flash_large_report.py  plot_flash_report.py  results.md  results_speedup.md  run_models_and_profile.bash  style_check.py  summarize_perf.py  temp.py  test_config.json  test_config_baseline_smoke_abs.json  test_config_final_submit_baseline.json  test_config_final_submit_flash.json  test_config_flash.json  test_config_flash_smoke_abs.json  test_config_maca.json  test_resume.json  write_to_feishu_sheet.py
scripts/feishu_writer/: README.md  provision_feishu_sheets.py  write_to_feishu_sheet.py
scripts/logs/: require_analysis.md  require_run_summary.json
scripts/precision_check/: precision_check_config.json  precision_compare.py  run_precision_check.sh  run_precision_check_gpt2.sh  run_precision_check_llama3.sh
test/: test_flash_attention.cc
test/dtype/: test_dtype_dispatch.cc  test_scalar.cc
test/flash_attn/: test_flash_layout.cc  test_flash_precision.cc
test/hook/: test_hook.cc  test_precision_check.cc  test_sdpa.cc  test_sdpa_cuda.cc
test/lora/: test_lora.cc
test/lr_scheduler/: test_chained_lr.cc  test_constant_lr.cc  test_helpers.h  test_lambda_lr.cc  test_linear_lr.cc  test_lr_scheduler.cc  test_lr_scheduler_validation.cc  test_sequential_lr.cc  test_step_lr.cc  test_training_lr_scheduler.cc
test/runtime/: test_maca_allocator.cc
test/transformer/: test_transformer_architecture.cc
test/transformer_spec/: test_transformer_spec.cc
tests/: CMakeLists.txt
tests/autograd/: CMakeLists.txt  test_autograd.cc  test_autograd_elementwise_backward.cc  test_autograd_elementwise_forward.cc  test_autograd_linear_backward.cc  test_autograd_linear_forward.cc  test_autograd_matmul_backward.cc  test_autograd_matmul_forward.cc  test_autograd_normalization_backward.cc  test_autograd_normalization_forward.cc  test_autograd_reduction_backward.cc  test_autograd_reduction_forward.cc  test_autograd_softmax_backward.cc  test_autograd_softmax_forward.cc  test_autograd_transform_backward.cc  test_autograd_transform_forward.cc
tests/checkpoint/: CMakeLists.txt  test_checkpoint_serialization.cc  test_lr_scheduler_state.cc  test_optimizer_state.cc  test_trainer_state.cc
tests/common/: CMakeLists.txt  test_macros.cmake  test_main.cc  test_utils.h
tests/dtype/: CMakeLists.txt  test_dtype_dispatch.cc  test_dtype_dispatch_compile_fail.cc  test_scalar.cc
tests/generator/: test_generator_basic.cc
tests/hook/: CMakeLists.txt  test_hook.cc  test_precision_check.cc
tests/lora/: CMakeLists.txt  test_lora.cc
tests/optimizer/: CMakeLists.txt  test_lr_scheduler.cc  test_optimizer.cc  test_optimizer_creation.cc  test_optimizer_cuda.cc  test_optimizer_distributed.cc  test_optimizer_step.cc
tests/slow/: CMakeLists.txt  test_slow.cc
tests/tensor/: CMakeLists.txt  test_tensor.cc  test_tensor_copy.cc  test_tensor_create.cc  test_tensor_delete.cc
tests/tensor/cpu_only/: test_tensor_copy.cc
tests/tensor/cuda_only/: test_tensor_copy.cc
tests/transformer/: CMakeLists.txt  test_transformer_architecture.cc
tools/: compare_loss.py  compare_tps.py
tools/infini_run/: CMakeLists.txt  infini_run.cc
(+407 files in other folders)
